--- a/variables.css
+++ b/variables.css
@@ -5,6 +5,12 @@
     --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #111;
     --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF;
 
+    /* Chrome */
+    --CUSTOM-CHROME-COLOR-TOOLBOX-BG: #4D4D4D;
+    --CUSTOM-CHROME-COLOR-ICON-TEXT: #FFFFFF;
+    --CUSTOM-CHROME-COLOR-TABS-BG: #2B2B2B;
+    --CUSTOM-CHROME-COLOR-TABS-SELECT-BG: #797979;
+
     /* Chrome - Urlbar */
     --CUSTOM-CHROME-COLOR-URLBAR-BG: #141414;
     --CUSTOM-CHROME-COLOR-URLBAR-TEXT: #FFF;
