--- a/variables.css
+++ b/variables.css
@@ -10,6 +10,7 @@
     --CUSTOM-CHROME-COLOR-ICON-TEXT: #FFFFFF;
     --CUSTOM-CHROME-COLOR-TABS-BG: #2B2B2B;
     --CUSTOM-CHROME-COLOR-TABS-SELECT-BG: #797979;
+    --CUSTOM-CHROME-SIZE-TABS-GAP: 2px;
 
     /* Chrome - Urlbar */
     --CUSTOM-CHROME-COLOR-URLBAR-BG: #141414;
