--- a/variables.css
+++ b/variables.css
@@ -1,5 +1,5 @@
 :root {
-    /* Chrome */
+    /* To be refactored */
     --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D;
     --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #111;
     --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF;
@@ -7,7 +7,8 @@
     /* Chrome */
     --CUSTOM-CHROME-COLOR-TITLE-BG: #4D4D4D;
     --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2B2B2B;
-    --CUSTOM-CHROME-COLOR-ICON-BG: #FFFFFF;
+    --CUSTOM-CHROME-COLOR-ICON-TEXT: #FFFFFF;
+    --CUSTOM-CHROME-COLOR-ICON-HOVER-BG: color-mix(in srgb, currentColor 22%, transparent);
     --CUSTOM-CHROME-COLOR-TABS-BG: #2B2B2B;
     --CUSTOM-CHROME-COLOR-TABS-SELECT-BG: #797979;
     --CUSTOM-CHROME-COLOR-TABS-TEXT: #FFFFFF;
