--- a/variables.css
+++ b/variables.css
@@ -15,7 +15,8 @@
     --CUSTOM-CHROME-COLOR-TABS-TEXT: #FFFFFF;
     --CUSTOM-CHROME-COLOR-TABS-SELECT-TEXT: #FFFFFF;
     --CUSTOM-CHROME-SIZE-TABS-GAP: 1px;
-    --CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS: 10px;
+    --CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS: 12px;
+    --CUSTOM-CHROME-BORDER-TABS-MULTISELECT: 3px solid #00b7ff;
 
     /* Chrome - Urlbar */
     --CUSTOM-CHROME-COLOR-URLBAR-BG: #141414;
