--- a/variables.css
+++ b/variables.css
@@ -1,25 +1,25 @@
 :root {
     /* To be refactored */
     --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D;
-    --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #111;
+    --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #131313;
     --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF;
 
     /* Chrome */
-    --CUSTOM-CHROME-COLOR-TITLE-BG: #464646;
-    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2B2B2B;
+    --CUSTOM-CHROME-COLOR-TITLE-BG: #494949;
+    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2e2e2e;
     --CUSTOM-CHROME-COLOR-TOOLBAR-BORDER-BOTTOM: black;
     --CUSTOM-CHROME-COLOR-ICON-TEXT: #FFFFFF;
     --CUSTOM-CHROME-COLOR-ICON-HOVER-BG: color-mix(in srgb, currentColor 22%, transparent);
-    --CUSTOM-CHROME-COLOR-TABS-BG: #676767;
-    --CUSTOM-CHROME-COLOR-TABS-SELECT-BG: #2B2B2B;
+    --CUSTOM-CHROME-COLOR-TABS-BG: #181818;
+    --CUSTOM-CHROME-COLOR-TABS-SELECT-BG: #2e2e2e;
     --CUSTOM-CHROME-COLOR-TABS-TEXT: #FFFFFF;
     --CUSTOM-CHROME-COLOR-TABS-SELECT-TEXT: #FFFFFF;
     --CUSTOM-CHROME-SIZE-TABS-GAP: 1px;
-    --CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS: 12px;
-    --CUSTOM-CHROME-BORDER-TABS-MULTISELECT: 3px solid #00b7ff;
+    --CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS: 9px;
+    --CUSTOM-CHROME-BORDER-TABS-MULTISELECT: 2px solid #008cff;
 
     /* Chrome - Urlbar */
-    --CUSTOM-CHROME-COLOR-URLBAR-BG: #141414;
+    --CUSTOM-CHROME-COLOR-URLBAR-BG: #111;
     --CUSTOM-CHROME-COLOR-URLBAR-TEXT: #FFF;
     --CUSTOM-CHROME-COLOR-URLBAR-LINK-TEXT: #00d9ff;
     --CUSTOM-CHROME-COLOR-URLBAR-HOVER-BG: #313131;
