--- a/variables.css
+++ b/variables.css
@@ -14,6 +14,7 @@
     --CUSTOM-CHROME-COLOR-TABS-SELECT-BG: #2e2e2e;
     --CUSTOM-CHROME-COLOR-TABS-TEXT: #FFFFFF;
     --CUSTOM-CHROME-COLOR-TABS-SELECT-TEXT: #FFFFFF;
+    --CUSTOM-CHROME-SIZE-TITLE-HEIGHT: 32px;
     --CUSTOM-CHROME-SIZE-TABS-GAP: 1px;
     --CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS: 9px;
     --CUSTOM-CHROME-BORDER-TABS-MULTISELECT: 2px solid #008cff;
