--- a/variables.css
+++ b/variables.css
@@ -2,18 +2,18 @@
     /* To be refactored */
     --CUSTOM-CHROME-COLOR-MAIN-BG: #4D4D4D;
     --CUSTOM-CHROME-COLOR-SEARCHBAR-BG: #131313;
-    --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFFFFF;
+    --CUSTOM-CHROME-COLOR-TAB-TEXT: #FFF;
 
     /* Chrome */
     --CUSTOM-CHROME-COLOR-TITLE-BG: #494949;
     --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2e2e2e;
     --CUSTOM-CHROME-COLOR-TOOLBAR-BORDER-BOTTOM: black;
-    --CUSTOM-CHROME-COLOR-ICON-TEXT: #FFFFFF;
-    --CUSTOM-CHROME-COLOR-ICON-HOVER-BG: color-mix(in srgb, currentColor 22%, transparent);
+    --CUSTOM-CHROME-COLOR-ICON-TEXT: #FFF;
+    --CUSTOM-CHROME-COLOR-ICON-HOVER-BG: #5e5e5e;
     --CUSTOM-CHROME-COLOR-TABS-BG: #181818;
     --CUSTOM-CHROME-COLOR-TABS-SELECT-BG: #2e2e2e;
-    --CUSTOM-CHROME-COLOR-TABS-TEXT: #FFFFFF;
-    --CUSTOM-CHROME-COLOR-TABS-SELECT-TEXT: #FFFFFF;
+    --CUSTOM-CHROME-COLOR-TABS-TEXT: #FFF;
+    --CUSTOM-CHROME-COLOR-TABS-SELECT-TEXT: #FFF;
     --CUSTOM-CHROME-SIZE-TITLE-HEIGHT: 32px;
     --CUSTOM-CHROME-SIZE-TABS-GAP: 1px;
     --CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS: 9px;
@@ -27,6 +27,21 @@
     --CUSTOM-CHROME-COLOR-URLBAR-SELECT-BG: #0085ff;
     --CUSTOM-CHROME-COLOR-URLBAR-SELECT-TEXT: #FFF;
     --CUSTOM-CHROME-COLOR-URLBAR-OUTLINE: #00d9ff;
+
+    /* Chrome - Context Menus */
+    --CUSTOM-CHROME-COLOR-CONTEXT-BG: #2e2e2e;
+    --CUSTOM-CHROME-COLOR-CONTEXT-SEPERATOR: #5e5e5e;
+    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-BG: #2e2e2e;
+    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-HOVER-BG: #5e5e5e;
+    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-TEXT: #FFF;
+    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-HOVER-TEXT: #FFF;
+    --CUSTOM-CHROME-COLOR-CONTEXT-ITEM-SHORTCUT-TEXT: rgb(255, 255, 255, 0.5);
+    --CUSTOM-CHROME-SIZE-CONTEXT-BORDER-RADIUS: 14px;
+    --CUSTOM-CHROME-SIZE-CONTEXT-ITEM-BORDER-RADIUS: 8px;
+    --CUSTOM-CHROME-PADDING-CONTEX: 7px;
+    --CUSTOM-CHROME-PADDING-CONTEXT-ITEM: 7px 0px 7px 18px;
+    --CUSTOM-CHROME-BORDER-CONTEXT: 1px solid black;
+    --CUSTOM-CHROME-BOXSHADOW-CONTEXT: 2px 2px 3px rgb(0, 0, 0, 0.4);
 
     /* Content - Newtab */
     --CUSTOM-NEWTAB-URL-BGIMAGE: url('./images/NewtabBackground.png');
