chore: move css files into their own folder

--- a/userContent.css
+++ b/userContent.css
@@ -1,4 +1,4 @@
-@import url(variables.css);
+@import "css/variables.css";
 
 /* ---------------------------- General ---------------------------- */
 @-moz-document url-prefix(about:) {
