--- a/userChrome.css
+++ b/userChrome.css
@@ -1,4 +1,4 @@
-@import url(variables.css);
+@import "css/variables.css";
 
 /* ========================================================================== */
 /* ================================= GENERAL ================================ */
