feat(chrome): style toolbar
The toolbar is on the left side now; without any labels.

--- a/css/variables.css
+++ b/css/variables.css
@@ -28,6 +28,10 @@
     --CUSTOM-CHROME-COLOR-URLBAR-SELECT-TEXT: #FFF;
     --CUSTOM-CHROME-COLOR-URLBAR-OUTLINE: #00d9ff;
 
+    /* Chrome - Toolbar */
+    --CUSTOM-CHROME-SIZE-TOOLBAR-WIDTH: 30px;
+    --CUSTOM-CHROME-MARGIN-TOOLBAR-ICON: 1px 0px;
+
     /* Chrome - Context Menus */
     --CUSTOM-CHROME-COLOR-CONTEXT-BG: #2e2e2e;
     --CUSTOM-CHROME-COLOR-CONTEXT-SEPERATOR: #5e5e5e;
