feat(chrome): make toolbar borders change via var

--- a/css/variables.css
+++ b/css/variables.css
@@ -6,8 +6,6 @@
 
     /* Chrome */
     --CUSTOM-CHROME-COLOR-TITLE-BG: #494949;
-    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2e2e2e;
-    --CUSTOM-CHROME-COLOR-TOOLBAR-BORDER-BOTTOM: black;
     --CUSTOM-CHROME-COLOR-ICON-TEXT: #FFF;
     --CUSTOM-CHROME-COLOR-ICON-HOVER-BG: #5e5e5e;
     --CUSTOM-CHROME-COLOR-TABS-BG: #181818;
@@ -17,6 +15,7 @@
     --CUSTOM-CHROME-SIZE-TITLE-HEIGHT: 32px;
     --CUSTOM-CHROME-SIZE-TABS-GAP: 1px;
     --CUSTOM-CHROME-SIZE-TABS-BORDER-RADIUS: 9px;
+    --CUSTOM-CHROME-BORDER-TABS-MULTISELECT: 2px solid #008cff;
     --CUSTOM-CHROME-BORDER-TABS-MULTISELECT: 2px solid #008cff;
 
     /* Chrome - Urlbar */
@@ -29,6 +28,8 @@
     --CUSTOM-CHROME-COLOR-URLBAR-OUTLINE: #00d9ff;
 
     /* Chrome - Toolbar */
+    --CUSTOM-CHROME-COLOR-TOOLBAR-BG: #2e2e2e;
+    --CUSTOM-CHROME-BORDER-TOOLBAR-EDGE: 1px solid black;
     --CUSTOM-CHROME-SIZE-TOOLBAR-WIDTH: 30px;
     --CUSTOM-CHROME-MARGIN-TOOLBAR-ICON: 3px 0px;
     --CUSTOM-CHROME-MARGIN-TOOLBAR-SEPERATOR: 5px 3px;
