feat(chrome): remove open urlbar top border

--- a/userChrome.css
+++ b/userChrome.css
@@ -410,7 +410,7 @@ span.urlbarView-type-icon {
 (Urlbar dropdown menu container)
 */
 div.urlbarView-body-inner {
-    border: visible !important;
+    border: 0px !important;
 }
 
 /* ========================================================================== */
